Fix dark mode and list element gap

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: black;
 
   font-synthesis: none;
@@ -106,6 +105,9 @@ button:focus-visible {
 
 .List {
   width: 60%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .Favorites {
